--- a/index.html
+++ b/index.html
@@ -36,8 +36,37 @@
       <input type="text" placeholder="Email">
       <div class="botaoTitulo">
         <a href="matricula.html">Matricule-se</a>
-        <img src="./surfbot-assets/seta.svg" alt="">
       </div>
+    </div>
+  </div>
+  <div class="BGsobre">
+    <div class="mapa">
+      <img src="./surfbot-assets/foto-galeria.jpg" alt="">
+      <ul class="comoChegar">
+        <h2 class="circuloVermelho">COMO CHEGAR</h2>
+        <li class="tracoAzul">Carro <span class="detalheCinza">pela via Lúcio Costa sentido Barra</span></li>
+        <li class="tracoAzul">Ônibus <span class="detalheCinza">linhas 2333, 138, 189 e 170</span></li>
+        <li class="tracoAzul">Metrô <span class="detalheCinza">linha azul sentido Zona Sul</span></li>
+      </ul>
+    </div>
+    <div class="sobre">
+      <h1 class="sobreTitulo"><span class="detalheAzul">Aulas</span> em uma das melhores praias do <span class="detalheAzul">Rio</span>.</h1>
+      <ul class="sobreVantagens">
+        <div class="sobreVantagensItem sandalia">
+          <img src="./surfbot-assets/sandalhas.svg" alt="">
+          <li>8km de costa</li>
+        </div>
+        <div class="sobreVantagensItem restaurante">
+          <img src="./surfbot-assets/coco.svg" alt="">
+          <li>Restaurantes à beira-mar</li>
+        </div>
+        <div class="sobreVantagensItem boia">
+          <img src="./surfbot-assets/boia.svg" alt="">
+          <li>Salva-vidas a cada 300m</li>
+        </div>
+      </ul>
+      <p class="sobreTexto">Como cidade capital, abriga na zona chamada Plateau, promontório à beira-mar, edifícios públicos e outras construções de importância, como o Palácio Presidencial, construído no fim do século XIX para ser a residência do governador português.<br>
+      <br>Como cidade capital, abriga na zona chamada Plateau, promontório à beira-mar, edifícios públicos e outras construções de importância, como o Palácio Presidencial, construído no fim do século XIX para ser a residência do governador português.</p>
     </div>
   </div>
 
