--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li class="tracoAzul">Metrô <span class="detalheCinza">linha azul sentido Zona Sul</span></li>
       </ul>
     </div>
-    <div class="sobre">
+    <div class="sobre" id="praia">
       <h1 class="sobreTitulo"><span class="detalheAzul">Aulas</span> em uma das melhores praias do <span class="detalheAzul">Rio</span>.</h1>
       <ul class="sobreVantagens">
         <div class="sobreVantagensItem sandalia">
@@ -66,7 +66,57 @@
         </div>
       </ul>
       <p class="sobreTexto">Como cidade capital, abriga na zona chamada Plateau, promontório à beira-mar, edifícios públicos e outras construções de importância, como o Palácio Presidencial, construído no fim do século XIX para ser a residência do governador português.<br>
-      <br>Como cidade capital, abriga na zona chamada Plateau, promontório à beira-mar, edifícios públicos e outras construções de importância, como o Palácio Presidencial, construído no fim do século XIX para ser a residência do governador português.</p>
+        <br>Como cidade capital, abriga na zona chamada Plateau, promontório à beira-mar, edifícios públicos e outras construções de importância, como o Palácio Presidencial, construído no fim do século XIX para ser a residência do governador português.
+      </p>
+    </div>
+  </div>
+
+  <div class="BGaulas">
+    <h1 class="tituloEscuro">Aulas</h1>
+    <div class="aulasCards">
+      <div class="card um">
+        <h2>INFANTIL</h2>
+        <ul class="cardLista">
+          <li>Público entre 5 e 15 anos</li>
+          <li>Equipamentos fornecidos</li>
+          <li>Horários de Sex. à Sáb.</li>
+          <li>2 horas seguidas de aula</li>
+        </ul>
+        <span class="cardPreco">R$ 49,00 / aula</span>
+        <div class="botaoAulas">
+          <a href="./matricula.html">Matricule-se</a>
+        </div>
+      </div>
+      <div class="card dois">
+        <h2>ADULTO</h2>
+        <ul class="cardLista">
+          <li>Público entre 16 e 80 anos</li>
+          <li>Equipamentos fornecidos</li>
+          <li>Horários de Sex. à Sáb.</li>
+          <li>3 horas seguidas de aula</li>
+        </ul>
+        <span class="cardPreco">R$ 69,00 / aula</span>
+        <div class="botaoAulas">
+          <a href="./matricula.html">Matricule-se</a>
+        </div>
+      </div>
+      <div class="card tres">
+        <h2>PROFISSIONAL</h2>
+        <ul class="cardLista">
+          <li>Experiência de 3 anos no surf</li>
+          <li>Você deve trazer o equipamento</li>
+          <li>Horários de Sex. à Sáb.</li>
+          <li>4 horas seguidas de aula</li>
+        </ul>
+        <span class="cardPreco">R$ 99,00 / aula</span>
+        <div class="botaoAulas">
+          <a href="./matricula.html">Matricule-se</a>
+        </div>
+      </div>
+    </div>
+    <div class="textoObservacao">
+      <p>Possui um grupo com mais de <span class="detalheVermelho">3 pessoas</span>?</p>
+      <p>Entre <span class="underlineVermelho">em contato</span> para um desconto personalizado.</p>
     </div>
   </div>
 
