--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
       <p>Entre <span class="underlineVermelho">em contato</span> para um desconto personalizado.</p>
     </div>
   </div>
+  <div class="BGfrase">
+    <div class="frase">
+      <blockquote>“O surf liberta as<br>ondas de uma vida.”</blockquote>
+      <p>Regis Pereira</p>
+    </div>
+  </div>
 
 </body>
 
