--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
   <footer class="footer">
     <p class="footerTexto">Projeto elaborado no curso de UI Design Avançado da Origamid. Alguns direitos reservados.</p>
-    <img class="footerIcon" src="/surfbot-assets/surfbot-iconWhite.svg" alt="">
+    <img class="footerIcon" src="./surfbot-assets/surfbot-iconWhite.svg" alt="">
   </footer>
 
 </body>
