ligando os links para id contato

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
     <div class="textoObservacao">
       <p>Possui um grupo com mais de <span class="detalheVermelho">3 pessoas</span>?</p>
-      <p>Entre <span class="underlineVermelho">em contato</span> para um desconto personalizado.</p>
+      <p>Entre <a class="underlineVermelho" href="#contato">em contato</a> para um desconto personalizado.</p>
     </div>
   </section>
 
@@ -133,7 +133,7 @@
     </div>
   </section>
 
-  <section class="BGcontato">
+  <section class="BGcontato" id="contato">
     <h1 class="tituloContato">Contato</h1>
     <div class="contato">
       <label for="nome">Nome</label>
