iniciando a ajustar a pagina de pagamento, ajustes na responsividade abaixo de 500px das paginas

--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alice&family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
-  <title>Surfbot</title>
+  <link rel="icon" type="image/x-icon" href="./surfbot-assets/surfbot-iconWhite.svg">
+  <title>Surfbot | Home</title>
 </head>
 
 <body>
-  <header class="BGbarraFuncionamento">
-    <p class="barraFuncionamento">Aulas na Praia Mansa de Sexta à Domingo das 06:00 às 14:00</p>
-  </div>
-  <div class="BGmenu">
-    <div class="menuStructure">
-      <div>
-        <a href="./"><img src="./surfbot.svg" alt="" class="logo"></a>
-      </div>
-      <ul class="menu">
-        <li><a href="#praia">Praia</a></li>
-        <li class="separador"></li>
-        <li><a href="#aulas">Aulas</a></li>
-        <li class="separador"></li>
-        <li><a href="#contato">Contato</a></li>
-        <li class="separador"></li>
-        <li class="redUnderline"><a href="matricula.html">Matricule-se</a></li>
-      </ul>
+  <header>
+    <div class="BGbarraFuncionamento">
+      <p class="barraFuncionamento">Aulas na Praia Mansa de Sexta à Domingo das 06:00 às 14:00</p>
     </div>
+    <div class="BGmenu">
+      <div class="menuStructure">
+        <div>
+          <a href="./"><img src="./surfbot.svg" alt="" class="logo"></a>
+        </div>
+        <ul class="menu">
+          <li><a href="#praia">Praia</a></li>
+          <li class="separador"></li>
+          <li><a href="#aulas">Aulas</a></li>
+          <li class="separador"></li>
+          <li><a href="#contato">Contato</a></li>
+          <li class="separador"></li>
+          <li class="redUnderline"><a href="matricula.html">Matricule-se</a></li>
+        </ul>
+      </div>
   </header>
 
   <section class="BGintro">
